@@ -5,5 +5,6 @@
   <include package="grokcore.component" file="meta.zcml" />
 
   <grok:grok package="."/>
+
   
 </configure>
